--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cosmjs/cosmwasm-stargate": "^0.31.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -41,6 +42,8 @@
     ]
   },
   "devDependencies": {
-    "react-app-rewired": "^2.2.1"
+    "cosmjs-types": "^0.8.0",
+    "react-app-rewired": "^2.2.1",
+    "sass": "^1.69.0"
   }
 }
